--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "blitz-submodule"]
-	path = blitz-submodule
+[submodule "app/src"]
+	path = app/src
 	url = https://github.com/Coystark/blitz-submodule
